Fixe #683: Alignment bugs in media wall design (#694)
* Fixes alignment bugs in media wall design

* Added newlines as requested

--- a/src/app/media-wall/media-wall-design/media-wall-design.component.scss
+++ b/src/app/media-wall/media-wall-design/media-wall-design.component.scss
@@ -67,7 +67,7 @@ input {
 }
 
 span.apply-button {
-	margin: 5px auto;
+	margin: 30px auto;
 
 	button {
 		border: none;
@@ -86,4 +86,32 @@ span.apply-button {
 			right: 5px;
 		}
 	}
+}
+
+#media_wd_heading {
+	font-size: 30px;
+}
+
+#selectedFeedsId {
+	margin-top:8px;
+	margin-left:30px;
+	width: 20%;
+}
+
+#selectedCardId {
+	margin-top:20px;
+}
+
+#selectedColumnId {
+	margin-top:10px;
+	width: 50%;
+}
+
+#count1 {
+	margin-right: 20px;
+	width: 40%;
+}
+
+#card_style {
+	 margin-top: 12px;
 }
